# takl

./: LICENSE  README.md  pyproject.toml
docs/: takl_project_tree.md
src/takl/: __init__.py  __main__.py  demo.py
src/takl/domain/: __init__.py  errors.py
src/takl/domain/entities/: area.py  session.py  task.py
src/takl/domain/ids/: area_id.py  session_id.py  task_id.py
src/takl/domain/values/: allocated.py  birth.py  completed.py  deadline.py  description.py  estimated.py  priorities.py  scheduled.py  timerange.py  title.py
tests/: test_domain.py
