[project]
name = "takl-engine"
version = "0.1.0"
description = "Domain-driven task and time tracking engine"
authors = [{ name = "David North" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
takl = "takl.demo:main"
